[tool.poetry]
name = "web3-multi-provider"
version = "0.4.0"
description = "Web3py provider that makes it easy to switch between different blockchain nodes to make sure application will be be online if main blockchain node will be unavailable."
authors = ["Raman <raman.s@lido.fi>"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7.10,<4"
web3 = ">=5.22.0,<6"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "2.17.0"
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.4"
black = "^22.3.0"
pytest-mock = "^3.7.0"
